--- a/secundaria.html
+++ b/secundaria.html
@@ -17,22 +17,25 @@
 
         <section>
 
-            <div>
-                <a href="img/logo.jpg">
-                    <h1>Click & Code</h1>
+            <div class="div1Logo">
+                <img src="img/logo.jpg.png" alt="Imagen Logo Click and Code" id="imgLogo">
+                    <p><h1 id="Click">Click</h1></p>
+                    <p><h1 id="y&">&</h1></p>
+                    <p><h1 id="Code">Code</h1></p>
+                    <p>PAGINA SECUNDARIA</p>
 
                 </a>
 
             </div>
-            <div>
-                <a href="img/tlf.png">
+            <div class="div2Telefono">
+               <img src="img/telefono.png" alt="" id="imgTelefono">
                     <h3>555-555-555</h3>
                     <p>Llámanos para mas detalles.</p>
                 </a>
 
             </div>
-            <div>
-                <a href="img/agenda.png">
+            <div class="div3Agenda">
+                <img src="img/agenda.png" alt="" id="imgAgenda">
                     <h3>click&code@gmail.com</h3>
                     <p>Escríbenos.</p>
                 </a>
@@ -50,7 +53,7 @@
         <ul>
 
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="secundaria.html"></a></li>
+            <li><a href="secundaria.html">Secundaria</a></li>
 
         </ul>
 
@@ -58,33 +61,7 @@
     </nav>
 
     <main>
-        <section>
-
-            <div>
-                <h3></h3>
-                <a href="imagen1"></a>
-
-            </div>
-            <div>
-                <h3></h3>
-                <a href="imagen2"></a>
-
-            </div>
-            <div>
-                <h3></h3>
-                <a href="imagen3"></a>
-
-            </div>
-
-
-        </section>
-
-
-
-
-
-
-
+        
 
     </main>
 
