--- a/index.html
+++ b/index.html
@@ -8,54 +8,60 @@
     <link rel="stylesheet" href="cssProyecto.css">
 </head>
 
-
-
-
 <body>
 
     <header class="cabecera">
 
+
         <section>
 
-            <div class="div1Logo">
-                <img src="img/logo.jpg.png" alt="Imagen Logo Click and Code" id="imgLogo">
-                    <p><h1 id="Click">Click</h1></p>
-                    <p><h1 id="y&">&</h1></p>
-                    <p><h1 id="Code">Code</h1></p>
+            <div class="logoYletras">
+                <div class="div1Logo">
+                    <img src="img/logo.jpg.png" alt="Imagen Logo Click and Code" id="imgLogo">
+
+
+                </div>
+                <div>
+                    <h1 id="nombre">Click & Code</h1>
+
+                </div>
             </div>
+
+
+            <div class="menu ">
+
+                <nav>
+                    <ul>
+                        <li><a href="principal">Principal</a></li>
+                        <li><a href="#secundaria">Segunda</a></li>
+                        <li><a href="contacto">Contacto</a></li>
+                    </ul>
+
+
+            </div>
+            </nav>
+
             <div class="div2Telefono">
-               <img src="img/telefono.png" alt="" id="imgTelefono">
-                    <h3>555-555-555</h3>
-                    <p>Llámanos para mas detalles.</p>
+                <img src="img/telefono.png" alt="" id="imgTelefono">
+                <h3>555-555-555</h3>
+                <p>Llámanos para mas detalles.</p>
                 </a>
 
             </div>
             <div class="div3Agenda">
                 <img src="img/agenda.png" alt="" id="imgAgenda">
-                    <h3>click&code@gmail.com</h3>
-                    <p>Escríbenos.</p>
+                <h3>click&code@gmail.com</h3>
+                <p>Escríbenos.</p>
                 </a>
 
             </div>
 
         </section>
 
+
     </header>
 
-
-
-
-    <nav>
-        <ul>
-
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="secundaria.html">Secundaria</a></li>
-
-        </ul>
-
-
-    </nav>
-
+   
     <main>
         <section>
 
@@ -86,6 +92,43 @@
 
 
     </main>
+
+    <footer>
+
+        <section>
+
+            <div class="logoYletras">
+                <div class="div1Logo">
+                    <img src="img/logo.jpg.png" alt="Imagen Logo Click and Code" id="imgLogo">
+
+
+                </div>
+                <div>
+                    <h1 id="nombre">Click & Code</h1>
+
+                </div>
+            </div>
+
+            
+            <div class="div2Telefono">
+                <img src="img/telefono.png" alt="" id="imgTelefono">
+                <h3>555-555-555</h3>
+                <p>Llámanos para mas detalles.</p>
+                </a>
+
+            </div>
+            <div class="div3Agenda">
+                <img src="img/agenda.png" alt="" id="imgAgenda">
+                <h3>click&code@gmail.com</h3>
+                <p>Escríbenos.</p>
+                </a>
+
+            </div>
+
+        </section>
+
+
+    </footer>
 
 
 </body>
